@@ -1,3 +1,14 @@
+2011-05-12  Young Han Lee  <joybro@company100.net>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] Implement layoutTestController.layerTreeAsText()
+        https://bugs.webkit.org/show_bug.cgi?id=60367
+
+        * WebCoreSupport/DumpRenderTreeSupportQt.cpp:
+        (DumpRenderTreeSupportQt::layerTreeAsText):
+        * WebCoreSupport/DumpRenderTreeSupportQt.h:
+
 2011-05-11  Noam Rosenthal  <noam.rosenthal@nokia.com>
 
         Reviewed by Kenneth Rohde Christiansen.
